--- a/portfolio.html
+++ b/portfolio.html
@@ -32,7 +32,9 @@
               <a class="header-link link" href="./index.html">Studio</a>
             </li>
             <li class="header-item">
-              <a class="header-link link" href="./portfolio.html">Portfolio</a>
+              <a class="header-link link current" href="./portfolio.html"
+                >Portfolio</a
+              >
             </li>
             <li class="header-item">
               <a class="header-link link" href="">Contacts</a>
@@ -92,11 +94,18 @@
           <ul class="portfolio-list list card-set">
             <li class="portfolio-item card-set-item">
               <a class="portfolio-item-link link" href="">
-                <img
-                  class="portfolio-img"
-                  src="./images/cv/img-11.jpg"
-                  alt="App - Foto"
-                />
+                <div class="portfolio-box">
+                  <img
+                    class="portfolio-img"
+                    src="./images/cv/img-11.jpg"
+                    alt="App - Foto"
+                  />
+                  <p class="portfolio-lable">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="portfolio-wrapper">
                   <h2 class="portfolio-subtitle">
                     Banking App Interface Concept
