--- a/portfolio.html
+++ b/portfolio.html
@@ -100,11 +100,13 @@
                     src="./images/cv/img-11.jpg"
                     alt="App - Foto"
                   />
-                  <p class="portfolio-lable">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
+                  <div class="portfolio-overlay">
+                    <p class="portfolio-overlay-lable">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
                 </div>
                 <div class="portfolio-wrapper">
                   <h2 class="portfolio-subtitle">
@@ -116,11 +118,20 @@
             </li>
             <li class="portfolio-item card-set-item">
               <a class="portfolio-item-link link" href="">
-                <img
-                  class="portfolio-img"
-                  src="./images/cv/img-12.jpg"
-                  alt="Marketing - Foto"
-                />
+                <div class="portfolio-box">
+                  <img
+                    class="portfolio-img"
+                    src="./images/cv/img-12.jpg"
+                    alt="Marketing - Foto"
+                  />
+                  <div class="portfolio-overlay">
+                    <p class="portfolio-overlay-lable">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-wrapper">
                   <h2 class="portfolio-subtitle">Cashless Payment</h2>
                   <p class="portfolio-undersubtitle">Marketing</p>
@@ -129,11 +140,20 @@
             </li>
             <li class="portfolio-item card-set-item">
               <a class="portfolio-item-link link" href="">
-                <img
-                  class="portfolio-img"
-                  src="./images/cv/img-13.jpg"
-                  alt="App - Foto"
-                />
+                <div class="portfolio-box">
+                  <img
+                    class="portfolio-img"
+                    src="./images/cv/img-13.jpg"
+                    alt="App - Foto"
+                  />
+                  <div class="portfolio-overlay">
+                    <p class="portfolio-overlay-lable">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-wrapper">
                   <h2 class="portfolio-subtitle">Meditation App</h2>
                   <p class="portfolio-undersubtitle">App</p>
@@ -142,11 +162,20 @@
             </li>
             <li class="portfolio-item card-set-item">
               <a class="portfolio-item-link link" href="">
-                <img
-                  class="portfolio-img"
-                  src="./images/cv/img-21.jpg"
-                  alt="Marketing - Foto"
-                />
+                <div class="portfolio-box">
+                  <img
+                    class="portfolio-img"
+                    src="./images/cv/img-21.jpg"
+                    alt="Marketing - Foto"
+                  />
+                  <div class="portfolio-overlay">
+                    <p class="portfolio-overlay-lable">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-wrapper">
                   <h2 class="portfolio-subtitle">Taxi Service</h2>
                   <p class="portfolio-undersubtitle">Marketing</p>
@@ -155,11 +184,20 @@
             </li>
             <li class="portfolio-item card-set-item">
               <a class="portfolio-item-link link" href="">
-                <img
-                  class="portfolio-img"
-                  src="./images/cv/img-22.jpg"
-                  alt="Design - Foto"
-                />
+                <div class="portfolio-box">
+                  <img
+                    class="portfolio-img"
+                    src="./images/cv/img-22.jpg"
+                    alt="Design - Foto"
+                  />
+                  <div class="portfolio-overlay">
+                    <p class="portfolio-overlay-lable">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-wrapper">
                   <h2 class="portfolio-subtitle">Screen Illustrations</h2>
                   <p class="portfolio-undersubtitle">Design</p>
@@ -168,11 +206,20 @@
             </li>
             <li class="portfolio-item card-set-item">
               <a class="portfolio-item-link link" href="">
-                <img
-                  class="portfolio-img"
-                  src="./images/cv/img-23.jpg"
-                  alt="Marketing - Foto"
-                />
+                <div class="portfolio-box">
+                  <img
+                    class="portfolio-img"
+                    src="./images/cv/img-23.jpg"
+                    alt="Marketing - Foto"
+                  />
+                  <div class="portfolio-overlay">
+                    <p class="portfolio-overlay-lable">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-wrapper">
                   <h2 class="portfolio-subtitle">Online Courses</h2>
                   <p class="portfolio-undersubtitle">Marketing</p>
@@ -181,11 +228,20 @@
             </li>
             <li class="portfolio-item card-set-item">
               <a class="portfolio-item-link link" href="">
-                <img
-                  class="portfolio-img"
-                  src="./images/cv/img-31.jpg"
-                  alt="Design - Foto"
-                />
+                <div class="portfolio-box">
+                  <img
+                    class="portfolio-img"
+                    src="./images/cv/img-31.jpg"
+                    alt="Design - Foto"
+                  />
+                  <div class="portfolio-overlay">
+                    <p class="portfolio-overlay-lable">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-wrapper">
                   <h2 class="portfolio-subtitle">Instagram Stories Concept</h2>
                   <p class="portfolio-undersubtitle">Design</p>
@@ -194,11 +250,20 @@
             </li>
             <li class="portfolio-item card-set-item">
               <a class="portfolio-item-link link" href="">
-                <img
-                  class="portfolio-img"
-                  src="./images/cv/img-32.jpg"
-                  alt="Web Site - Foto"
-                />
+                <div class="portfolio-box">
+                  <img
+                    class="portfolio-img"
+                    src="./images/cv/img-32.jpg"
+                    alt="Web Site - Foto"
+                  />
+                  <div class="portfolio-overlay">
+                    <p class="portfolio-overlay-lable">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-wrapper">
                   <h2 class="portfolio-subtitle">Organic Food</h2>
                   <p class="portfolio-undersubtitle">Web Site</p>
@@ -207,11 +272,20 @@
             </li>
             <li class="portfolio-item card-set-item">
               <a class="portfolio-item-link link" href="">
-                <img
-                  class="portfolio-img"
-                  src="./images/cv/img-33.jpg"
-                  alt="Web Site - Foto"
-                />
+                <div class="portfolio-box">
+                  <img
+                    class="portfolio-img"
+                    src="./images/cv/img-33.jpg"
+                    alt="Web Site - Foto"
+                  />
+                  <div class="portfolio-overlay">
+                    <p class="portfolio-overlay-lable">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-wrapper">
                   <h2 class="portfolio-subtitle">Fresh Coffee</h2>
                   <p class="portfolio-undersubtitle">Web Site</p>
