--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           <h1 class="hero-title title">
             Effective Solutions for Your Business
           </h1>
-          <button class="hero-btn btn btn-dark" type="button">
+          <button class="hero-btn btn btn-dark" type="button" data-modal-open>
             Order Service
           </button>
         </div>
@@ -581,9 +581,9 @@
       </div>
     </footer>
     <!-- Modal window -->
-    <div class="backdrop">
+    <div class="backdrop is-hidden" data-modal>
       <div class="modal">
-        <button class="modal-btn" type="button">
+        <button class="modal-btn" type="button" data-modal-close>
           <svg class="modal-icon" width="20" height="20">
             <use href=""></use>
           </svg>
