--- a/index.html
+++ b/index.html
@@ -584,8 +584,8 @@
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button class="modal-btn" type="button" data-modal-close>
-          <svg class="modal-icon" width="20" height="20">
-            <use href=""></use>
+          <svg class="modal-icon" width="8" height="8">
+            <use href="./images/icons.svg#ui-close"></use>
           </svg>
         </button>
       </div>
