--- a/portfolio.html
+++ b/portfolio.html
@@ -100,13 +100,13 @@
                     src="./images/cv/img-11.jpg"
                     alt="App - Foto"
                   />
-                  <div class="portfolio-overlay">
-                    <p class="portfolio-overlay-lable">
-                      14 Stylish and User-Friendly App Design Concepts · Task
-                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                      App · Cloud Storage App
-                    </p>
-                  </div>
+                  <!-- <div class="portfolio-overlay"> -->
+                  <p class="portfolio-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                  <!-- </div> -->
                 </div>
                 <div class="portfolio-wrapper">
                   <h2 class="portfolio-subtitle">
