--- a/portfolio.html
+++ b/portfolio.html
@@ -100,13 +100,11 @@
                     src="./images/cv/img-11.jpg"
                     alt="App - Foto"
                   />
-                  <!-- <div class="portfolio-overlay"> -->
                   <p class="portfolio-overlay">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                     App · Cloud Storage App
                   </p>
-                  <!-- </div> -->
                 </div>
                 <div class="portfolio-wrapper">
                   <h2 class="portfolio-subtitle">
@@ -124,13 +122,11 @@
                     src="./images/cv/img-12.jpg"
                     alt="Marketing - Foto"
                   />
-                  <div class="portfolio-overlay">
-                    <p class="portfolio-overlay-lable">
-                      14 Stylish and User-Friendly App Design Concepts · Task
-                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                      App · Cloud Storage App
-                    </p>
-                  </div>
+                  <p class="portfolio-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
                 <div class="portfolio-wrapper">
                   <h2 class="portfolio-subtitle">Cashless Payment</h2>
@@ -146,13 +142,11 @@
                     src="./images/cv/img-13.jpg"
                     alt="App - Foto"
                   />
-                  <div class="portfolio-overlay">
-                    <p class="portfolio-overlay-lable">
-                      14 Stylish and User-Friendly App Design Concepts · Task
-                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                      App · Cloud Storage App
-                    </p>
-                  </div>
+                  <p class="portfolio-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
                 <div class="portfolio-wrapper">
                   <h2 class="portfolio-subtitle">Meditation App</h2>
@@ -168,13 +162,11 @@
                     src="./images/cv/img-21.jpg"
                     alt="Marketing - Foto"
                   />
-                  <div class="portfolio-overlay">
-                    <p class="portfolio-overlay-lable">
-                      14 Stylish and User-Friendly App Design Concepts · Task
-                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                      App · Cloud Storage App
-                    </p>
-                  </div>
+                  <p class="portfolio-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
                 <div class="portfolio-wrapper">
                   <h2 class="portfolio-subtitle">Taxi Service</h2>
@@ -190,13 +182,11 @@
                     src="./images/cv/img-22.jpg"
                     alt="Design - Foto"
                   />
-                  <div class="portfolio-overlay">
-                    <p class="portfolio-overlay-lable">
-                      14 Stylish and User-Friendly App Design Concepts · Task
-                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                      App · Cloud Storage App
-                    </p>
-                  </div>
+                  <p class="portfolio-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
                 <div class="portfolio-wrapper">
                   <h2 class="portfolio-subtitle">Screen Illustrations</h2>
@@ -212,13 +202,11 @@
                     src="./images/cv/img-23.jpg"
                     alt="Marketing - Foto"
                   />
-                  <div class="portfolio-overlay">
-                    <p class="portfolio-overlay-lable">
-                      14 Stylish and User-Friendly App Design Concepts · Task
-                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                      App · Cloud Storage App
-                    </p>
-                  </div>
+                  <p class="portfolio-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
                 <div class="portfolio-wrapper">
                   <h2 class="portfolio-subtitle">Online Courses</h2>
@@ -234,13 +222,11 @@
                     src="./images/cv/img-31.jpg"
                     alt="Design - Foto"
                   />
-                  <div class="portfolio-overlay">
-                    <p class="portfolio-overlay-lable">
-                      14 Stylish and User-Friendly App Design Concepts · Task
-                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                      App · Cloud Storage App
-                    </p>
-                  </div>
+                  <p class="portfolio-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
                 <div class="portfolio-wrapper">
                   <h2 class="portfolio-subtitle">Instagram Stories Concept</h2>
@@ -256,13 +242,11 @@
                     src="./images/cv/img-32.jpg"
                     alt="Web Site - Foto"
                   />
-                  <div class="portfolio-overlay">
-                    <p class="portfolio-overlay-lable">
-                      14 Stylish and User-Friendly App Design Concepts · Task
-                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                      App · Cloud Storage App
-                    </p>
-                  </div>
+                  <p class="portfolio-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
                 <div class="portfolio-wrapper">
                   <h2 class="portfolio-subtitle">Organic Food</h2>
@@ -278,13 +262,11 @@
                     src="./images/cv/img-33.jpg"
                     alt="Web Site - Foto"
                   />
-                  <div class="portfolio-overlay">
-                    <p class="portfolio-overlay-lable">
-                      14 Stylish and User-Friendly App Design Concepts · Task
-                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                      App · Cloud Storage App
-                    </p>
-                  </div>
+                  <p class="portfolio-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
                 <div class="portfolio-wrapper">
                   <h2 class="portfolio-subtitle">Fresh Coffee</h2>
